[package]
name = "remarko"
version = "0.1.1"
description = "A small webview window for previewing makdown and localhost."
edition = "2021"
authors = [
    "OlshaMB",
    "Vova-max-png",
    "vetor1dev"
]
licence = "zlib License"
documentation = "https://github.com/OlshaMB/remarko"
readme = "README.md"
homepage = "https://github.com/OlshaMB/remarko"
repository = "https://github.com/OlshaMB/remarko"
license-file = "LICENSE"
keywords = ["markdown", "webview", "cli"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["rt", "macros", "io-util", "process"] }
wry = "0.27.0"
clap = { version = "4.1.8", features = ["derive"] }
aurelius = "0.7.5"
notify = "5.1.0"
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"
